# TeensyFreeRTOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
cmake/: ArduinoTeensy3Toolchain.cmake
src/: main.c  sysinit.c
src/freertos/: FreeRTOS.h  FreeRTOSConfig.h
src/include/: sysinit.h
